--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Expanding Cards</title>
 </head>
 <body>
+    <!-- <main>
+        <section class="landing">
+            <h2 class="big-text">Welcome</h2>
+        </section>
+    </main> -->
     <div class="container">
         <div class="panel active" style="background-image: url(/images/profile.jpeg);">
             <h3>Profile</h3>
@@ -27,6 +32,6 @@
     </div>
 
     <script src="/script.js"></script>
-    
+
 </body>
 </html>
