edit cover and ensemble

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Expanding Cards</title>
 </head>
 <body>
-    <!-- <main>
+    <main>
         <section class="landing">
-            <h2 class="big-text">Welcome</h2>
+            <h2>Welcome</h2>
         </section>
-    </main> -->
+    </main>
+     
     <div class="container">
         <div class="panel active" style="background-image: url(/images/profile.jpeg);">
             <h3>Profile</h3>
